--- a/server1-sb2/build.gradle
+++ b/server1-sb2/build.gradle
@@ -24,6 +24,8 @@ dependencies {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 
+	implementation 'no.sysco.middleware.kafka:kafka-interceptor-zipkin:0.4.2'
+
 	// Swagger
 	implementation('io.springfox:springfox-swagger-ui:2.9.2')
 	implementation("io.springfox:springfox-swagger2:2.9.2") {
