--- a/server1-sb2/build.gradle
+++ b/server1-sb2/build.gradle
@@ -24,7 +24,9 @@ dependencies {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 
-	implementation 'no.sysco.middleware.kafka:kafka-interceptor-zipkin:0.4.2'
+//	compile 'no.sysco.middleware.kafka:kafka-interceptor-zipkin:0.4.2'
+	compile 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
 
 	// Swagger
 	implementation('io.springfox:springfox-swagger-ui:2.9.2')
