--- a/server2-sb2/src/main/resources/config/application-kafka-config.yml
+++ b/server2-sb2/src/main/resources/config/application-kafka-config.yml
@@ -2,8 +2,7 @@ kafka:
   bootstrap:
     servers: http://172.21.185.30:9092
   topics:
-     server2:
-       some-topic: "server2-some-topic"
+     some-topic: "some-topic"
 
 spring:
   cloud:
