--- a/server3-sb1/build.gradle
+++ b/server3-sb1/build.gradle
@@ -28,6 +28,8 @@ dependencies {
 	implementation 'org.springframework.kafka:spring-kafka:1.3.0.RELEASE'
 	implementation 'no.sysco.middleware.kafka:kafka-interceptor-zipkin:0.4.2' // not logs in spring boot 1
 
+	implementation 'org.springframework.cloud:spring-cloud-starter-feign'
+
 	// Swagger
 	implementation('io.springfox:springfox-swagger-ui:2.9.2')
 	implementation("io.springfox:springfox-swagger2:2.9.2") {
