--- a/server2-sb2/build.gradle
+++ b/server2-sb2/build.gradle
@@ -21,6 +21,11 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
 //	implementation 'org.springframework.kafka:spring-kafka'
 	implementation 'org.springframework.cloud:spring-cloud-stream-binder-kafka'
+
+	implementation 'org.springframework.cloud:spring-cloud-starter-zipkin'
+
+
+
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
